# graynet

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: AddSourceGroups.cmake
doc/: Doxyfile  conf.py  index.rst  internal.rst  operations.rst  optimizers.rst  serialization.rst
doc/doc/: index.rst  installation.rst
examples/mnist/: MNIST.cpp
graynet/: CMakeLists.txt  Device.cpp  Device.h  Expression.cpp  Expression.cu  Expression.h  Expression_p.h  Graph.cpp  Graph.h  Layer.cpp  Node.cpp  Node.h  Optimizer.cpp  Optimizer.h  Shape.h  Tensor.cpp  Tensor.h  Utils.cpp  Utils.h  graynet.h
test/: TestNodes.cpp
